@@ -8,7 +8,7 @@ use DBICTest;
 
 my $schema = DBICTest->init_schema();
 
-plan tests => 20;
+plan tests => 21;
 
 my $rs = $schema->resultset("CD")->search({}, { order_by => 'cdid' });
 
@@ -28,8 +28,9 @@ is($rs_title->min, 'Caterwaulin\' Blues', "min okay for title");
 
 cmp_ok($rs_year->sum, '==', 9996, "three artists returned");
 
-$rs_year->reset;
+my $reset_ret = $rs_year->reset;
 is($rs_year->next, 1999, "reset okay");
+is($reset_ret, undef, 'reset returns undef');
 
 is($rs_year->first, 1999, "first okay");
 
